--- a/_config.yml
+++ b/_config.yml
@@ -104,8 +104,7 @@ zotero_username: # your zotero username
 wechat_qr: # filename of your wechat qr-code saved as an image (e.g., wechat-qr.png if saved to assets/img/wechat-qr.png)
 
 contact_note: >
-  <-- You can even add a little note about which of these is the best way to reach you. -->
-  Email me at maierhofer at stat.ucla.edu
+Email me at maierhofer at stat.ucla.edu
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
@@ -273,8 +272,8 @@ display_categories: ['blockquotes'] # these categories will be displayed on the 
 
 scholar:
 
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Maierhofer]
+  first_name: [Thomas, J.]
 
   style: apa
   locale: en
