--- a/_config.yml
+++ b/_config.yml
@@ -103,8 +103,7 @@ discord_id: # your discord id (18-digit unique numerical identifier)
 zotero_username: # your zotero username
 wechat_qr: # filename of your wechat qr-code saved as an image (e.g., wechat-qr.png if saved to assets/img/wechat-qr.png)
 
-contact_note: >
-Email me at maierhofer at stat.ucla.edu
+contact_note: Email me at maierhofer at stat.ucla.edu
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
