--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,19 +1,15 @@
 - title: General Information
   type: map
   contents:
-    - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+    - name: Name
+      value: Thomas J. Maierhofer
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: University of California, Los Angeles
+      year: 2023
       description:
         - Description 1.
         - Description 2.
