--- a/_config.yml
+++ b/_config.yml
@@ -406,12 +406,12 @@ jsonresume:
   - basics
   - work
   - education
-  - publications
-  - projects
-  - volunteer
-  - awards
-  - certificates
-  - skills
-  - languages
-  - interests
-  - references
+  # - publications
+  # - projects
+  # - volunteer
+  # - awards
+  # - certificates
+  # - skills
+  # - languages
+  # - interests
+  # - references
